[package]
name = "cuda-async"
version = "0.0.1"
authors = ["Harris Joseph <harris.joseph.088@gmail.com>"]
description = "A safe, async rust wrapper for CUDA Driver/Runtime APIs"
repository = "https://github.com/vivym/cuda-rs"
readme = "README.md"
keywords = ["cuda", "ffi"]
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-rs = "0.1"
cuda-rs-sys = "0.1"
enum_primitive = "0.1"
num-traits = "0.2"
thiserror = "1"
ndarray = "0.16.1"
tokio = { version = "1.42.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread","macros"] }